<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wifi Four Relay Board</string>
    <string name="action_settings">Settings</string>
    <string name="fwd">FORWARD</string>
    <string name="bck">REVERSE</string>
    <string name="stop">STOP</string>
    <string name="left">LEFT</string>
    <string name="right">RIGHT</string>
    <string name="ip"></string>
    <string name="port"></string>
    <string name="connect">Connect</string>
    <string name="iplab">IP:</string>
     <string name="portlab">PORT:</string>
     <string name="off">OFF</string>
     <string name="about">About Us</string>
     <string name="speak">Speak</string>
     <string name="status">STATUS</string>

</resources>