<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
     <TextView
        android:id="@+id/cam_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:text="@string/iplab" />
    <EditText
        android:id="@+id/ip"
        android:layout_width="400px"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/cam_url"
        android:text="@string/ip">
    </EditText>
    
    <TextView
        android:id="@+id/cam_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cam_url"
        android:layout_marginTop="25dp"
        android:text="@string/portlab" />
    <EditText
        android:id="@+id/port"
        android:layout_width="200px"
        android:layout_height="wrap_content"
        android:layout_below="@id/cam_url"
        android:layout_toRightOf="@+id/cam_port"
        android:layout_marginTop="15dp"
        android:text="@string/port">
    </EditText>
    <Button
        android:id="@+id/connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/port"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="100dp"
        android:onClick="onClick"
        android:text="@string/connect">
    </Button>

</RelativeLayout>
